# wgpu-test

./: Cargo.toml  LICENSE  readme.md
src/: app.rs  camera.rs  input_manager.rs  main.rs  model_data.rs  shader_cache.rs  vertex.rs
src/renderer/: frame_packet.rs  mod.rs  sprite_overlay.rs
src/renderer/shaders/: shader.frag  shader.vert  sprite.frag  sprite.vert
src/shaders/: shader.vert
